--- a/main.html
+++ b/main.html
@@ -38,6 +38,7 @@
         <script src="js/strings.js"></script>
         <script src="js/auth/amazon-cognito-identity.min.js"></script>
         <script src="js/auth/config.js"></script>
+        <script src="js/auth/token-handler.js"></script>
         <script src="js/event_dispatcher.js"></script>
         <script src="js/model/model.js"></script>
         <script src="js/view/view.js"></script>
