Some siginin page formatting - return to index.html on logout

--- a/main.html
+++ b/main.html
@@ -26,7 +26,9 @@
                 <p id="definition"></p>
                 <div id="alphabet" ></div>
                 <div id="logout_button_div">
-                    <button id="logout_button" class="btn btn-success">Logout</button>
+                    <form>
+                        <button id="logout_button" class="btn btn-success">Logout</button>
+                    </form>
                 </div>
             </div>
             <div id="leaderboard_container">
