--- a/index.html
+++ b/index.html
@@ -18,20 +18,7 @@
                     <div id="mobile_banner">
                         <img src="img/Hangman.png" />
                     </div>
-                    <form id="signinForm">
-                        <h2>Sign In</h2>
-                        <input type="email" id="emailInputSignin" class="form-control auth-input" placeholder="Email" required>
-                        <input type="password" id="passwordInputSignin" class="form-control auth-input" placeholder="Password" pattern=".*" required>
-                        <h4 id="signin_error_message" class="error_message text-danger">Incorrect Username or Password</h4>
-                        <div>
-                        </div>
-                        <button type="submit" id="signin_button" class="btn btn-info">Log in</button>
-                        <a href="register.html" class="btn btn-info">Sign Up</a>
-                    </form>
-                    <button id="login_with_badgebook_button" class="btn btn-danger">Login with Badgebook</button>
-                    <button id="logout_with_badgebook_button" class="btn btn-danger">Logout with Badgebook</button>
-                    <div>
-                    </div>
+                    <button id="login_with_badgebook_button" class="btn btn-info">Login or Signup with Badgebook</button>
                 </div>
             </div>
         </div>
@@ -44,15 +31,5 @@
         <script src="js/controller/signin_controller.js"></script>
         <script src="js/register_app.js"></script>
         <script src="js/auth/amazon-cognito-identity.min.js"></script>
-        <!-- <script>
-            let login_with_badgebook_button_element = document.getElementById("login_with_badgebook_button");
-            console.log(login_with_badgebook_button_element);
-
-            function handleClickLogin() {
-                badgeBookTokenHandler.loginWithBadgeBook();
-            }
-
-            login_with_badgebook_button_element.onclick = handleClickLogin;
-        </script> -->
     </body>
 </html>
